# Brain

./: .gitignore  Cargo.toml
src/: chat.rs  client.rs  main.rs  mcp.rs
