[package]
name = "brain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["env", "derive"] }
fasteval = "0.2.4"
ollama-rs = { version = "0.3.0", features = ["macros"] }
regex = "1.11.1"
rmcp = { version = "0.1.5", features = ["client", "server", "transport-child-process", "transport-sse"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
